--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,30 +1,20 @@
-<h1>Showing all articles</h1>
+<h1 align="center">Listing all articles</h1>
 
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |articles| %>
-      <tr>
-        <td><%= articles.title %></td>
-        <td><%= articles.description %></td>
-        <td><%= link_to 'Show', articles %></td>
-        <td><%= link_to 'Edit', edit_article_path(articles) %></td>
-        <td><%= link_to 'Destroy', articles, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'Create an article', new_article_path %>
-
-<%= link_to 'Home', root_path %>
+<% @articles.each do |articles| %>
+  <div class="row">
+    <div class="col-sm-12 col-sm-offset-2">
+      <div class="card card-lg">
+        <div class="article-title">
+          <%= link_to articles.title, articles %>
+        </div>
+        <div class="article-body">
+          <%= truncate(articles.description, length: 100) %>
+        </div>
+        <div class="article-actions">
+          <%= link_to 'Edit', edit_article_path(articles), class: "btn btn-xs btn-primary" %>
+          <%= link_to 'Destroy', articles, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+        </div>
+      </div>
+    </div>
+  </div>
+<% end %>
