--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Alpha-Blog</h1>
-
-<%= link_to "About", about_path %>
-<%= link_to "New Article", 'articles/new' %>
+<div class= "center jumbotron">
+  <h1>TestApp</h1>
+  <%= link_to "Sign up now", "#", class: "btn-xlarge btn btn-danger btn-lg" %>
+</div>
