--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,20 +1,3 @@
 <h1 align="center">Listing all articles</h1>
 
-<% @articles.each do |articles| %>
-  <div class="row">
-    <div class="col-sm-12 col-sm-offset-2">
-      <div class="card card-lg">
-        <div class="article-title">
-          <%= link_to articles.title, articles %>
-        </div>
-        <div class="article-body">
-          <%= truncate(articles.description, length: 100) %>
-        </div>
-        <div class="article-actions">
-          <%= link_to 'Edit', edit_article_path(articles), class: "btn btn-xs btn-primary" %>
-          <%= link_to 'Destroy', articles, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
-        </div>
-      </div>
-    </div>
-  </div>
-<% end %>
+<%= render 'article', obj: @articles %>
